# fastapi-jwt-auth

./: .env.example  .gitignore  Dockerfile  README.MD  config.py  docker-compose.test.yaml  docker-compose.yaml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 666d21bdaaad_.py
src/: database.py
src/auth/: dependencies.py  routers.py  schemas.py
src/repositories/: base.py
src/services/: auth.py  base.py
src/users/: dependencies.py  models.py  routers.py  schemas.py
src/utils/: hash_password.py  jwt_token.py
tests/: test_users.py
